--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.11",
     "@sveltejs/kit": "next",
-    "svelte": "^3.34.0"
+    "svelte": "^3.34.0",
+    "mdsvex": "^0.9.8"
   }
 }
