--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "preview": "svelte-kit preview",
+    "postinstall": "patch-package"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.11",
     "@sveltejs/kit": "next",
-    "svelte": "^3.34.0",
-    "mdsvex": "^0.9.8"
+    "mdsvex": "^0.9.8",
+    "svelte": "^3.34.0"
+  },
+  "dependencies": {
+    "patch-package": "github:milahu/patch-package#pnpm-support-2"
   }
 }
